# retreive

./: .dockerignore  Cargo.toml  README.md  compose.yaml  dockerfile
db/: delete-schema.sql  init-schema.sql
scripts/: deployment-tests.sh
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  routes.rs
src/routes/: input_data.rs  output_data.rs
wiki-fetcher/: Cargo.toml
wiki-fetcher/src/: main.rs
